--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-anyio==4.4.0
-bidict==0.23.1
+#anyio==4.4.0
+#bidict==0.23.1
 caninos-sdk==0.5.0
-click==8.1.7
-dnspython==2.6.1
+#click==8.1.7
+#dnspython==2.6.1
 eventlet==0.36.1
 exceptiongroup==1.2.1
 gpiod==2.1.3
@@ -27,7 +27,7 @@ sniffio==1.3.1
 typer==0.12.3
 typing_extensions==4.11.0
 uvicorn==0.30.1
-uvloop==0.19.0
+#uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
 wsproto==1.2.0
